--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8bff0f</color>
-    <color name="colorPrimaryDark">#50cb00</color>
-    <color name="colorAccent">#50cb00</color>
+    <color name="colorPrimary">#37474f</color>
+    <color name="colorPrimaryDark">#263238</color>
+    <color name="colorAccent">#37474f</color>
     <color name="colorReceitas">#0089c5</color>
     <color name="colordespesas">#d10000</color>
-    <color name="visaoGeralFloatingActionMenuPressed">#2c7000</color>
+    <color name="visaoGeralFloatingActionMenuPressed">#37474f</color>
+    <color name="textColorPrimary">#000000</color>
 </resources>
