--- a/app/src/main/res/layout/fragment_formulario_cagetoria.xml
+++ b/app/src/main/res/layout/fragment_formulario_cagetoria.xml
@@ -10,7 +10,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Còdigo"
+        android:hint="Código"
         android:id="@+id/formularioCategoriaId"
         android:inputType="numberDecimal"/>
 
